added now images to gh-pages

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ for the JavaScript code in this tag.
 <h2 id="sec-1"><span class="section-number-2">1</span> Readme first</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-<a href="../master/README.html">../master/README.html</a>
+<a href="README.html">README.html</a>
 </p>
 </div>
 </div>
