--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ for the JavaScript code in this tag.
 <h2 id="sec-4"><span class="section-number-2">4</span> References</h2>
 <div class="outline-text-2" id="text-4">
 <p>
+The ANSYS-Mode highlighting and APDL reference
 <a href="doc/A-M_APDL_reference.html">doc/A-M_APDL_reference.html</a>
 </p>
 </div>
