--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ for the JavaScript code in this tag.
 <h2 id="sec-1"><span class="section-number-2">1</span> Readme first</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-<a href="README.html">README.html</a>
+The <i>README</i> file
 </p>
 </div>
 </div>
@@ -163,7 +163,7 @@ for the JavaScript code in this tag.
 <h2 id="sec-2"><span class="section-number-2">2</span> NEWS</h2>
 <div class="outline-text-2" id="text-2">
 <p>
-<a href="NEWS.html">NEWS.html</a>
+The <i>NEWS</i>
 </p>
 </div>
 </div>
@@ -171,8 +171,8 @@ for the JavaScript code in this tag.
 <h2 id="sec-3"><span class="section-number-2">3</span> Tutorials</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-<a href="doc/A-M_introductory_tutorial.html">doc/A-M_introductory_tutorial.html</a>
-<a href="doc/A-M_in-depth_tutorial.html">doc/A-M_in-depth_tutorial.html</a>
+<i>Introductory tutorial</i>
+<i>In-depth tutorial</i>
 </p>
 </div>
 </div>
@@ -180,8 +180,7 @@ for the JavaScript code in this tag.
 <h2 id="sec-4"><span class="section-number-2">4</span> References</h2>
 <div class="outline-text-2" id="text-4">
 <p>
-The ANSYS-Mode highlighting and APDL reference
-<a href="doc/A-M_APDL_reference.html">doc/A-M_APDL_reference.html</a>
+Ansys-Mode <i>Highlighting and APDL reference</i>
 </p>
 </div>
 </div>
@@ -189,7 +188,7 @@ The ANSYS-Mode highlighting and APDL reference
 <h2 id="sec-5"><span class="section-number-2">5</span> Todo</h2>
 <div class="outline-text-2" id="text-5">
 <p>
-<a href="TODO.html">TODO.html</a>
+<i>What remains to do</i>
 </p>
 </div>
 </div>
@@ -197,7 +196,7 @@ The ANSYS-Mode highlighting and APDL reference
 <h2 id="sec-6"><span class="section-number-2">6</span> License</h2>
 <div class="outline-text-2" id="text-6">
 <p>
-<a href="LICENSE">LICENSE</a>
+The GNU puplic license <i>GPL</i>
 </p>
 </div>
 </div>
