--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ for the JavaScript code in this tag.
 <h2 id="sec-1"><span class="section-number-2">1</span> Readme first</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-The <i>README</i> file
+The <a href="README.html">README</a> file
 </p>
 </div>
 </div>
@@ -163,7 +163,7 @@ The <i>README</i> file
 <h2 id="sec-2"><span class="section-number-2">2</span> NEWS</h2>
 <div class="outline-text-2" id="text-2">
 <p>
-The <i>NEWS</i>
+The <a href="NEWS.html">NEWS</a>
 </p>
 </div>
 </div>
@@ -171,8 +171,8 @@ The <i>NEWS</i>
 <h2 id="sec-3"><span class="section-number-2">3</span> Tutorials</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-<i>Introductory tutorial</i>
-<i>In-depth tutorial</i>
+<a href="doc/A-M_introductory_tutorial.html">Introductory tutorial</a>
+<a href="doc/A-M_in-depth_tutorial.html">In-depth tutorial</a>
 </p>
 </div>
 </div>
@@ -180,7 +180,7 @@ The <i>NEWS</i>
 <h2 id="sec-4"><span class="section-number-2">4</span> References</h2>
 <div class="outline-text-2" id="text-4">
 <p>
-Ansys-Mode <i>Highlighting and APDL reference</i>
+Ansys-Mode <a href="doc/A-M_APDL_reference.html">Highlighting and APDL reference</a>
 </p>
 </div>
 </div>
@@ -188,7 +188,7 @@ Ansys-Mode <i>Highlighting and APDL reference</i>
 <h2 id="sec-5"><span class="section-number-2">5</span> Todo</h2>
 <div class="outline-text-2" id="text-5">
 <p>
-<i>What remains to do</i>
+<a href="TODO.html">What remains to do</a>
 </p>
 </div>
 </div>
@@ -196,7 +196,7 @@ Ansys-Mode <i>Highlighting and APDL reference</i>
 <h2 id="sec-6"><span class="section-number-2">6</span> License</h2>
 <div class="outline-text-2" id="text-6">
 <p>
-The GNU puplic license <i>GPL</i>
+The GNU puplic license <a href="LICENSE">GPL</a>
 </p>
 </div>
 </div>
