improved README.html

--- a/README.html
+++ b/README.html
@@ -324,7 +324,7 @@ left and Emacs in ANSYS-Mode on the right hand side.
 
 
 <div class="figure">
-<p><img src="https://github.com/dieter-wilhelm/ansys-mode/blob/master/doc/template_menu.png" alt="template_menu.png" />
+<p><img src="doc/template_menu.png" alt="template_menu.png" />
 </p>
 </div>
 </div>
