removed wrong export option in matlib/README.org

--- a/matlib/README.html
+++ b/matlib/README.html
@@ -228,25 +228,25 @@ mplist ! Check
 <h2 id="sec-2"><span class="section-number-2">2</span> Materials defined in ANSYS-Mode's library</h2>
 <div class="outline-text-2" id="text-2">
 <dl class="org-dl">
-<dt>42CrMo4<sub>biso</sub><sub>Rp850.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>AlSi9Cu3<sub>biso.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>C75s<sub>hardened</sub><sub>kinh.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>construction<sub>steel.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>copper.MPA<sub>MPL</sub></dt><dd></dd>
-<dt>M250-35A<sub>aniso.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>M250-35A<sub>biso.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>M250-35A<sub>orthotropic</sub><sub>elastic.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>M800-65A<sub>biso.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>NdFeB<sub>magnet.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>PPS<sub>Fortron1140L4</sub><sub>70degC</sub><sub>kinh.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>PPS.MPA<sub>MPL</sub></dt><dd>Celanese Fortron 1140L4 40 % glass fibre, Young's
+<dt>42CrMo4_biso_Rp850.MPA_MPL</dt><dd></dd>
+<dt>AlSi9Cu3_biso.MPA_MPL</dt><dd></dd>
+<dt>C75s_hardened_kinh.MPA_MPL</dt><dd></dd>
+<dt>construction_steel.MPA_MPL</dt><dd></dd>
+<dt>copper.MPA_MPL</dt><dd></dd>
+<dt>M250-35A_aniso.MPA_MPL</dt><dd></dd>
+<dt>M250-35A_biso.MPA_MPL</dt><dd></dd>
+<dt>M250-35A_orthotropic_elastic.MPA_MPL</dt><dd></dd>
+<dt>M800-65A_biso.MPA_MPL</dt><dd></dd>
+<dt>NdFeB_magnet.MPA_MPL</dt><dd></dd>
+<dt>PPS_Fortron1140L4_70degC_kinh.MPA_MPL</dt><dd></dd>
+<dt>PPS.MPA_MPL</dt><dd>Celanese Fortron 1140L4 40 % glass fibre, Young's
 modulus 80 % reduced compared to test specimen to
 replicate a random fibre orientation.
 </dd>
-<dt>St37<sub>elastic.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>St37.MPA<sub>MPL</sub></dt><dd></dd>
-<dt>St70<sub>biso.MPA</sub><sub>MPL</sub></dt><dd></dd>
-<dt>X46Cr13.MPA<sub>MPL</sub></dt><dd></dd>
+<dt>St37_elastic.MPA_MPL</dt><dd></dd>
+<dt>St37.MPA_MPL</dt><dd></dd>
+<dt>St70_biso.MPA_MPL</dt><dd></dd>
+<dt>X46Cr13.MPA_MPL</dt><dd></dd>
 </dl>
 </div>
 </div>
@@ -255,7 +255,7 @@ replicate a random fibre orientation.
 <h2 id="sec-3"><span class="section-number-2">3</span> Other material data</h2>
 <div class="outline-text-2" id="text-3">
 <dl class="org-dl">
-<dt>creep<sub>curves</sub><sub>PPS</sub><sub>Fortron1140l4</sub><sub>120degC.csv</sub></dt><dd>A 40 % short glas
+<dt>creep_curves_PPS_Fortron1140l4_120degC.csv</dt><dd>A 40 % short glas
 fibre filled PPS.  The stress - creep strain curves are scaled
 with a factor of 0.8 from test specimen to account for a random
 fibre orientation in thick walled parts.  They might be used as
@@ -272,3 +272,4 @@ an example for data fitting with the TBFT command.
 </div>
 </body>
 </html>
+
