Prepare documenation on gh-pages for version 20.6

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-03-06 Fr 23:37 -->
+<!-- 2021-09-09 Do 15:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Comprehensive APDL-Mode Documentation</title>
@@ -248,43 +248,45 @@ for the JavaScript code in this tag.
 </div><div id="content">
 <h1 class="title">The Comprehensive APDL-Mode Documentation</h1>
 
-
-
-<div id="outline-container-org1cbaed5" class="outline-2">
-<h2 id="org1cbaed5"><span class="section-number-2">1</span> Introduction</h2>
+<div id="outline-container-org0093aa8" class="outline-2">
+<h2 id="org0093aa8"><span class="section-number-2">1</span> Introduction</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-You'll find in <a href="README.html">README.org</a> the following topics:
+HTML: <a href="README.html">README.org</a>
+</p>
+</div>
+</div>
+<div id="outline-container-orged0d9b8" class="outline-2">
+<h2 id="orged0d9b8"><span class="section-number-2">2</span> Tutorials</h2>
+<div class="outline-text-2" id="text-2">
+</div>
+<div id="outline-container-org5032621" class="outline-3">
+<h3 id="org5032621"><span class="section-number-3">2.1</span> Introductory</h3>
+<div class="outline-text-3" id="text-2-1">
+<p>
+APDL-Mode introductory tutorial
 </p>
 <ul class="org-ul">
-<li>Features</li>
-<li>Installation</li>
-<li>Usage</li>
-<li>Configuration</li>
-<li>Customisation</li>
-<li>News</li>
-<li>License</li>
-<li>Acknowledgements</li>
-<li>Further Resources</li>
-<li>TODOs</li>
+<li>PDF: <a href="doc/A-M_introductory_tutorial.pdf">Tutorial</a></li>
+<li>HTML: <a href="doc/A-M_introductory_tutorial.html">Tutorial</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgab8e51a" class="outline-2">
-<h2 id="orgab8e51a"><span class="section-number-2">2</span> Tutorials</h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-orgfb93846" class="outline-3">
+<h3 id="orgfb93846"><span class="section-number-3">2.2</span> In-depth</h3>
+<div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
-<li><a href="doc/A-M_introductory_tutorial.html">Introductory Tutorial</a></li>
-<li><a href="doc/A-M_in-depth_tutorial.html">In-depth Tutorial</a></li>
+<li>HTML: <a href="doc/A-M_in-depth_tutorial.html">In-depth Tutorial</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org05669f7" class="outline-2">
-<h2 id="org05669f7"><span class="section-number-2">3</span> Reference Manuals</h2>
+</div>
+<div id="outline-container-orge4c1427" class="outline-2">
+<h2 id="orge4c1427"><span class="section-number-2">3</span> Reference Manuals</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
-<li>The Apdl-Mode <a href="doc/A-M_APDL_reference.html">Highlighting and APDL reference</a>.</li>
-<li>The <a href="matlib/README.html">APDL-Mode material library</a>.</li>
+<li>HTML: The Apdl-Mode <a href="doc/A-M_APDL_reference.html">Highlighting and APDL reference</a>.</li>
+<li>HTML: <a href="matlib/README.html">APDL-Mode material library</a>.</li>
 </ul>
 <hr />
 </div>
@@ -292,8 +294,8 @@ You'll find in <a href="README.html">README.org</a> the following topics:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: H. Dieter Wilhelm (<a href="mailto:dieter@duenenhof-wilhelm.de">dieter@duenenhof-wilhelm.de</a>)</p>
-<p class="date">Date: Time-stamp: <span class="timestamp-wrapper"><span class="timestamp">&lt;2020-02-29 Sa&gt;</span></span></p>
-<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.3 (<a href="https://orgmode.org">Org</a> mode 9.3.6)</p>
+<p class="date">Date: Time-stamp: <span class="timestamp-wrapper"><span class="timestamp">&lt;2021-09-09 Do&gt;</span></span></p>
+<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
