--- a/matlib/README.html
+++ b/matlib/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-03-07 Sa 21:17 -->
+<!-- 2021-09-09 Do 15:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>This Apdl-Mode's README.org for the matlib/ directory</title>
@@ -251,23 +251,27 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org48e2b0a">1. Usage in an APDL file</a></li>
-<li><a href="#org0ceeae9">2. Materials defined in Apdl-Mode's library</a></li>
-<li><a href="#orgac4dd31">3. Other material data</a></li>
+<li><a href="#org96a5853">1. Usage in an APDL file</a></li>
+<li><a href="#org1996d7d">2. Materials defined in Apdl-Mode's library</a></li>
+<li><a href="#org8901f96">3. Other material data</a></li>
 </ul>
 </div>
 </div>
+<p>
+Its text is best read in Emacs' Org mode.
+</p>
+
 <p>
 Copyright (C) 2015 - 2020  H. Dieter Wilhelm, GPL V3
 </p>
 
 <p>
 If not indicated otherwise in the file name, material properties are
-linear and for room temperature only.
+linear and for room temperature.
 </p>
 
-<div id="outline-container-org48e2b0a" class="outline-2">
-<h2 id="org48e2b0a"><span class="section-number-2">1</span> Usage in an APDL file</h2>
+<div id="outline-container-org96a5853" class="outline-2">
+<h2 id="org96a5853"><span class="section-number-2">1</span> Usage in an APDL file</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Specify the material library to read from:
@@ -319,8 +323,8 @@ mplist ! Check
 </div>
 </div>
 
-<div id="outline-container-org0ceeae9" class="outline-2">
-<h2 id="org0ceeae9"><span class="section-number-2">2</span> Materials defined in Apdl-Mode's library</h2>
+<div id="outline-container-org1996d7d" class="outline-2">
+<h2 id="org1996d7d"><span class="section-number-2">2</span> Materials defined in Apdl-Mode's library</h2>
 <div class="outline-text-2" id="text-2">
 <dl class="org-dl">
 <dt>42CrMo4_biso_Rp850.MPA_MPL</dt><dd></dd>
@@ -359,8 +363,8 @@ replicate a random fibre orientation.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgac4dd31" class="outline-2">
-<h2 id="orgac4dd31"><span class="section-number-2">3</span> Other material data</h2>
+<div id="outline-container-org8901f96" class="outline-2">
+<h2 id="org8901f96"><span class="section-number-2">3</span> Other material data</h2>
 <div class="outline-text-2" id="text-3">
 <dl class="org-dl">
 <dt>creep_curves_PPS_Fortron1140l4_120degC.csv</dt><dd>A 40 % short glas
@@ -375,8 +379,8 @@ an example for data fitting with the TBFT command.</dd>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: H. Dieter Wilhelm (<a href="mailto:dieter@duenenhof-wilhelm.de">dieter@duenenhof-wilhelm.de</a>)</p>
-<p class="date">Date: Time-stamp: <span class="timestamp-wrapper"><span class="timestamp">&lt;2020-03-07 Sa&gt;</span></span></p>
-<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.3 (<a href="https://orgmode.org">Org</a> mode 9.3.6)</p>
+<p class="date">Date: Time-stamp: <span class="timestamp-wrapper"><span class="timestamp">&lt;2020-02-28 Fr&gt;</span></span></p>
+<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
